# MetalExp

./: .gitignore  AGENTS.md  README.md  build.gradle  gradle.properties  settings.gradle
docs/: README.md
docs/logs/: 2026-04-11-gui-atlas-repair-log_cn.md  2026-04-11-metal-batching-and-purple-screen-log_cn.md  2026-04-11-world-pass-census-log_cn.md
docs/plans/: 2026-04-09-metalexp-bootstrap-plan.md  2026-04-11-native-atlas-blit-and-bridge-split-plan.md  2026-04-11-world-playable-milestone-plan_cn.md  2026-04-12-black-screen-world-pipeline-plan_cn.md  2026-04-12-renderpipeline-driven-metal-refactor-plan_cn.md
docs/research/: 2026-04-09-minecraft-26.2-vulkan-metal-research_cn.md
docs/specs/: 2026-04-09-metalexp-design.md  2026-04-11-world-playable-milestone-design_cn.md
native/: CMakeLists.txt  README.md
native/src/: metalexp_bridge_probe.m  metalexp_bridge_stub.c  metalexp_buffer.m  metalexp_command_context.m  metalexp_common.h  metalexp_gui_pipeline.m  metalexp_jni.m  metalexp_present_pipeline.m  metalexp_raster_pipeline.m  metalexp_sprite_blit.m  metalexp_surface.m  metalexp_texture.m  metalexp_texture_readback.m  metalexp_world_pipeline.m
shared/: README.md
src/client/java/dev/nkanf/metalexp/client/: MetalExpClient.java
src/client/resources/: metalexp.client.mixins.json
src/client/resources/assets/metalexp/lang/: en_us.json
src/main/java/dev/nkanf/metalexp/: MetalExpMod.java
src/main/java/dev/nkanf/metalexp/bootstrap/: BackendNegotiationResolver.java  BackendPlan.java  (+2 more)
src/main/resources/: fabric.mod.json  metalexp.mixins.json
(+58 files in other folders)
